Add AdminController for user and post management; implement user banning, role changing, and statistics retrieval